Make background transparent

--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
         <script type="text/javascript" src="js/libs/jquery-layout.js"></script>
         <script type="text/javascript" src="js/libs/EventBus.js"></script>
 
-        <script type="text/javascript" src="js/onReady.js"></script>
+        <script type="text/javascript" src="js/libs/JUAS.js"></script>
 
         <style type="text/css">
             #minimize { background-color: gray; color: white; text-align:right; cursor: default;}
@@ -36,6 +36,8 @@
 
                 padding: 0px 0px 0px 0px;
                 margin: 0px 0px 0px 0px;
+
+                border-radius: 15px;
             }
             .pane {
                 display: none; /* will appear when layout inits */
