--- a/html/index.html
+++ b/html/index.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div class="pane ui-layout-center">
-                <div style="background-color: blue;">_<a href="http://www.google.es/">GOOGLE!</a></div>
+                <div style="background-color: blue;">_</div>
             </div>
             <div class="pane ui-layout-south">
                 <div style="background-color: green;">_</div>
