--- a/html/index.html
+++ b/html/index.html
@@ -10,8 +10,9 @@
         <script type="text/javascript" src="js/libs/jquery-ui.js"></script>
         <script type="text/javascript" src="js/libs/jquery-layout.js"></script>
         <script type="text/javascript" src="js/libs/EventBus.js"></script>
-
         <script type="text/javascript" src="js/libs/JUAS.js"></script>
+
+        <script type="text/javascript" src="js/my_app.js"></script>
 
         <style type="text/css">
             #minimize { background-color: gray; color: white; text-align:right; cursor: default;}
