--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
         <link href="css/smoothness/jquery-ui.css" rel="stylesheet" type="text/css"/>
+	<link href="css/themes/default/main.css" rel="stylesheet" type="text/css"/>
 
         <script type="text/javascript" src="js/libs/underscore.js"></script>
         <script type="text/javascript" src="js/libs/jquery.js"></script>
@@ -15,9 +16,6 @@
         <script type="text/javascript" src="js/my_app.js"></script>
 
         <style type="text/css">
-            #minimize { background-color: gray; color: white; text-align:right; cursor: default;}
-            #maximize { background-color: gray; color: white; text-align:right; cursor: default;}
-            #quit { background-color: gray; color: white; text-align:left; cursor: default;}
 
             html, body {
                 width: 100%;
