Upgrade to Qt 5.7.1+

--- a/html/index.html
+++ b/html/index.html
@@ -6,12 +6,13 @@
         <link href="css/smoothness/jquery-ui.css" rel="stylesheet" type="text/css"/>
 	<link href="css/themes/default/main.css" rel="stylesheet" type="text/css"/>
 
+        <script type="text/javascript" src="qrc:///qtwebchannel/qwebchannel.js"></script>
         <script type="text/javascript" src="js/libs/underscore.js"></script>
         <script type="text/javascript" src="js/libs/jquery.js"></script>
         <script type="text/javascript" src="js/libs/jquery-ui.js"></script>
         <script type="text/javascript" src="js/libs/jquery-layout.js"></script>
         <script type="text/javascript" src="js/libs/EventBus.js"></script>
-        <script type="text/javascript" src="js/libs/JUAS.js"></script>
+        <script type="text/javascript" src="js/libs/core.js"></script>
 
         <script type="text/javascript" src="js/my_app.js"></script>
     </head>
